--- a/style.css
+++ b/style.css
@@ -614,6 +614,68 @@ footer .copyright{
     line-height: 25px;
 }
 
+/* Blog Page */
+
+#page-header.blog-header{
+    background-image: url("img/banner/b19.jpg");
+}
+
+#blog{
+    padding: 150px 150px 0 150px;
+}
+#blog .blog-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    padding-bottom: 90px;
+}
+#blog .blog-img{
+    width: 50%;
+    margin-right: 40px;
+}
+#blog img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+#blog .bolg-details{
+    width: 50%;
+}
+#blog .bolg-details a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #000;
+    font-weight: 700;
+    position: relative;
+    transition: 0.3s;
+}
+#blog .bolg-details a::after{
+    content: "";
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    right: -60px;
+}
+#blog .bolg-details a:hover{
+    color: #088178;
+}
+#blog .bolg-details a:hover:after{
+    background-color: #088178;
+}
+
+#blog .blog-box h1{
+    position: absolute;
+    top: -40px;
+    left: 0;
+    font-size: 70px;
+    font-weight: 700;
+    color: #c9cbce;
+    z-index: -9;
+}
+
 
 
 /*Start Media Query*/
@@ -699,6 +761,8 @@ footer .copyright{
         width: 70%;
     }  
 }
+
+
 @media(max-width: 477px ){
     .section-p1 {
         padding: 20px;
@@ -761,6 +825,26 @@ footer .copyright{
         margin-right: 0px;
     }
     #prodetails .single-pro-details {
+        width: 100%;
+    }
+
+    /* Blog Page */
+    #blog {
+        padding: 100px 20px 0 20px;
+    }
+
+
+    #blog .blog-box {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    #blog .blog-img {
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 30px;
+    }
+    #blog .bolg-details {
         width: 100%;
     }
 
