--- a/style.css
+++ b/style.css
@@ -676,6 +676,36 @@ footer .copyright{
     z-index: -9;
 }
 
+/* About Page */
+#page-header.about-header{
+    background-image: url("img/about/banner.png");
+}
+
+#about-head{
+    display: flex;
+    align-items: center;
+}
+
+#about-head img{
+    width: 50%;
+    height: auto;
+}
+#about-head div{
+    padding-left: 40px;
+}
+#about-app{
+    text-align: center;
+}
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+#about-app .video video{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
 
 
 /*Start Media Query*/
@@ -845,6 +875,23 @@ footer .copyright{
         margin-bottom: 30px;
     }
     #blog .bolg-details {
+        width: 100%;
+    }
+
+    /* About Page */
+    #about-head {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #about-head img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #about-head div {
+        padding-left: 0px;
+    }
+    #about-app .video {
         width: 100%;
     }
 
